--- a/.travis.yml
+++ b/.travis.yml
@@ -2,9 +2,10 @@ sudo: required
 services:
   - docker
 before_install:
-  - docker build -t mukulkumra/demo-react-app -f Dockerfile.dev .
+  - docker build -t mukulkumra/demo-react-app .
 script:
-  - docker run -e CI=true mukulkumra/demo-react-app npm run test -- --coverage
+  - docker build -t mukulkumra/demo-test-app -f Dockerfile.dev
+  - docker run -e CI=true mukulkumra/demo-test-app npm run test -- --coverage
 deploy:
   provider: elasticbeanstalk
   region: "eu-west-1"
